[package]
name = "tid"
version = "0.1.2"
authors = ["Marieke Westendorp <ma3ke.cyber@gmail.com>"]
repository = "https://git.sr.ht/~ma3ke/tid"
edition = "2021"
description = "A tiny clock and system information bar."

[dependencies]
battery = "0.7.8"
chrono = "0.4.31"
lexopt = "0.3.0"
mpd = "0.1.0"
pixels = "0.13.0"
psf2 = "0.4.0"
fleck = "0.1.1"
sysinfo = "0.29.10"
winit = "0.28.0"
winit_input_helper = "0.14.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"

[profile.release]
strip = true
